--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 }
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding-left: 35px;
   padding-bottom: 50px;
