--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   background-color: rgb(131, 131, 131);
 }
 
-button {
+.button1 {
   color: white;
   background-color: #3882f6;
   border: none;
@@ -45,12 +45,72 @@ button {
 }
 .random {
   text-align: center;
+  padding-top: 40px;
 }
 .container2 {
   display: flex;
   gap: 70px;
   justify-content: center;
+  gap: 100px;
+  padding-bottom: 100px;
+  padding-top: 30px;
+  flex-wrap: wrap;
 }
 .item {
   width: 200px;
+}
+
+img {
+  max-width: 250px;
+}
+.part3 {
+  background-color: #e5e7eb;
+  padding-bottom: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.quote {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  padding: 40px 25% 0px 25%;
+}
+.name {
+  font-size: 24px;
+  padding-left: 55%;
+}
+.part4 {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.container3 {
+  background-color: #3882f6;
+  display: flex;
+  gap: 150px;
+  border-radius: 15px;
+  padding: 20px 50px 20px 50px;
+  align-items: center;
+}
+.signup {
+  padding-top: -5px;
+}
+.button2 {
+  border-style: solid;
+  border-color: white;
+  background-color: #3882f6;
+  color: white;
+  border-radius: 8px;
+  height: 38px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+.footer {
+  background-color: #1f2937;
+  text-align: center;
+  color: white;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
