--- a/style.css
+++ b/style.css
@@ -63,6 +63,9 @@ body {
 img {
   max-width: 250px;
 }
+.text {
+  padding-left: 40px;
+}
 .part3 {
   background-color: #e5e7eb;
   padding-bottom: 25px;
